--- a/ProiectContoare/Pages/Plati/Create.cshtml
+++ b/ProiectContoare/Pages/Plati/Create.cshtml
@@ -19,8 +19,8 @@
                 <label asp-for="Plata.ModalitateDePlata" class="control-label"></label>
                 <select asp-for="Plata.ModalitateDePlata" class="form-control">
                     <option value="Numerar">Numerar</option>
-                    <option value="Card bancar">Card bancar</option>
-                    <option value="Transfer bancar">Transfer bancar</option>
+                    <option value="CardBancar">Card Bancar</option>
+                    <option value="TransferBancar">Transfer Bancar</option>
                 </select>
                 <span asp-validation-for="Plata.ModalitateDePlata" class="text-danger"></span>
             </div>
