--- a/ProiectContoare/Pages/Plati/Details.cshtml
+++ b/ProiectContoare/Pages/Plati/Details.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Plata.Factura)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Plata.Factura.FacturaId)
+            @Html.DisplayFor(model => model.Plata.FacturaId)
         </dd>
     </dl>
 </div>
