--- a/ProiectContoare/Pages/Plati/Edit.cshtml
+++ b/ProiectContoare/Pages/Plati/Edit.cshtml
@@ -29,7 +29,11 @@
             <div class="form-group">
                 <span class="text-danger">*</span>
                 <label asp-for="Plata.ModalitateDePlata" class="control-label"></label>
-                <select asp-for="Plata.ModalitateDePlata" class="form-control"></select>
+                <select asp-for="Plata.ModalitateDePlata" class="form-control">
+                    <option value="Numerar">Numerar</option>
+                    <option value="CardBancar">Card Bancar</option>
+                    <option value="TransferBancar">Transfer Bancar</option>
+                </select>
                 <span asp-validation-for="Plata.ModalitateDePlata" class="text-danger"></span>
             </div>
             <div class="form-group">
