--- a/ProiectContoare/Pages/Shared/_Layout.cshtml
+++ b/ProiectContoare/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Tarife/Index">Tarife</a>
                         </li>
                     </ul>
-             
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
