--- a/ProiectContoare/Pages/Shared/_Layout.cshtml
+++ b/ProiectContoare/Pages/Shared/_Layout.cshtml
@@ -45,11 +45,14 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - ProiectContoare - <a asp-area="" asp-page="/Privacy">Privacy</a>
+    <footer class="border-top footer text-muted" style="background-color: #343a40; color: white; padding: 2px 0; font-weight: bold; font-size: 0.85rem; border-top-width: 1px;">
+        <div class="container text-center">
+            &copy; 2025 - ProiectContoare - Simplificăm gestionarea consumului de apă pentru o viață mai ușoară.
         </div>
     </footer>
+
+
+
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
