--- a/ProiectContoare/Pages/Consumatori/Edit.cshtml
+++ b/ProiectContoare/Pages/Consumatori/Edit.cshtml
@@ -27,7 +27,7 @@
             <div class="form-group">
                 <span class="text-danger">*</span>
                 <label asp-for="Consumator.Email" class="control-label"></label>
-                <input asp-for="Consumator.Email" class="form-control" />
+                <input asp-for="Consumator.Email" readonly class="form-control" />
                 <span asp-validation-for="Consumator.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
